--- a/.gitconfig
+++ b/.gitconfig
@@ -13,5 +13,7 @@
 [credential "https://dev.azure.com"]
 	useHttpPath = true
 [alias]
-	logline = log --graph --pretty=format:'%C(yellow)%h %C(red)%ah%C(auto)%d %Creset%s %C(bold blue)<%an>'
-	ll = log --pretty=format:'%C(yellow)%h%C(auto)%d %Creset%s %C(bold blue)<%an>'
+	# lm (log more): graph hash date ref subject_name author
+	lm = log --graph --pretty=format:'%C(yellow)%h %C(magenta)%ch%C(auto)%d %C(reset)%s %C(blue)<%an>'
+	# ll (log less): hash ref subject_name relative_date author
+	ll = log --pretty=format:'%C(yellow)%h%C(auto)%d %Creset%s %C(magenta)%cr'
