feat: add alacritty conf & tmux startup + update script

--- a/.inputrc
+++ b/.inputrc
@@ -1,5 +1,4 @@
-# bash better auto-completion
-# `man readline`
+# bash better auto-completion from `man readline`
 set show-all-if-ambiguous on
 set completion-ignore-case on
 set completion-map-case on
