--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,3 +1,5 @@
+# to download themes
+# git clone https://github.com/alacritty/alacritty-theme ~/.config/alacritty/themes
 import = [
     "~/.config/alacritty/themes/themes/catppuccin_frappe.toml"
 ]
