feat: helper script for apt packages

--- a/config.json
+++ b/config.json
@@ -1,52 +1,63 @@
 {
   "check": {
     "apt": [
+      "# essential packages",
       "apt-transport-https",
       "bash-completion",
       "build-essential",
-      "clang",
-      "cmake",
+      "curl",
       "ffmpeg",
+      "flatpak",
       "git",
-      "gnupg2",
-      "jq",
-      "libffi-dev",
-      "libgdbm-dev",
-      "libjpeg-dev",
-      "libncurses5-dev",
-      "libncursesw5-dev",
-      "libnss3-dev",
-      "libpng-dev",
-      "libreadline-dev",
-      "libssl-dev",
-      "libtiff-dev",
-      "openssh-server",
-      "pavucontrol",
-      "pkgconf",
       "software-properties-common",
-      "stow",
       "ttf-mscorefonts-installer",
-      "vim",
-      "xclip",
+      "# pyenv dependencies",
+      "libbz2-dev",
+      "libffi-dev",
+      "liblzma-dev",
+      "libncursesw5-dev",
+      "libreadline-dev",
       "libsqlite3-dev",
-      "xz-utils",
-      "tk-dev",
+      "libssl-dev",
       "libxml2-dev",
       "libxmlsec1-dev",
-      "libffi-dev",
-      "liblzma-dev"
+      "tk-dev",
+      "xz-utils",
+      "zlib1g-dev",
+      "# cargo-update dependencies",
+      "libgit2-dev",
+      "libssh-dev",
+      "libssl-dev",
+      "pkgconf",
+      "# imagemagick dependencies",
+      "libjpeg-dev",
+      "libpng-dev",
+      "libtiff-dev"
     ],
     "python": {
       "pyenvCheck": true,
       "version": 3.12
     },
     "rust": {
-      "rustupCheck": true
+      "rustupCheck": true,
+      "cargoUpdateCheck": true
     },
     "firmware": ""
   },
   "install": {
-    "apt": ["bat", "btop", "fzf", "imagemagick", "vlc", "nautilus", "plank"],
+    "apt": [
+      "bat",
+      "btop",
+      "fzf",
+      "gnupg2",
+      "imagemagick",
+      "nautilus",
+      "openssh-server",
+      "stow",
+      "vim",
+      "vlc",
+      "xclip"
+    ],
     "flatpak": [],
     "cargo": []
   },
