fix: codium enable multicursor via ctrl click

--- a/dotfiles/codium/.config/VSCodium/User/settings.json
+++ b/dotfiles/codium/.config/VSCodium/User/settings.json
@@ -18,6 +18,7 @@
     "editor.cursorBlinking": "expand",
     "editor.fontSize": 16,
     "editor.minimap.enabled": false,
+    "editor.multiCursorModifier": "ctrlCmd",
     "editor.tabCompletion": "on",
     "editor.wordWrap": "on",
     "explorer.confirmDelete": false,
@@ -28,7 +29,6 @@
     "git.enableCommitSigning": true,
     "hediet.vscode-drawio.theme": "Kennedy",
     "javascript.suggest.completeFunctionCalls": true,
-    "python.analysis.completeFunctionParens": true,
     "shellformat.flag": "-i 2 -ci -bn",
     "telemetry.telemetryLevel": "off",
     "terminal.integrated.fontSize": 16,
