--- a/config.json
+++ b/config.json
@@ -74,6 +74,14 @@
       }
     ],
     "aptAltSources": [
+{
+"remoteGpgKey": "https://download.docker.com/linux/ubuntu/gpg",
+"gpgKeyPath": "/etc/apt/keyrings/docker.asc",
+"repo": "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo '$VERSION_CODENAME') stable",
+"packages", [
+"docker-ce", "docker-ce-cli", "containerd.io", "docker-buildx-plugin", "docker-compose-plugin"
+]
+},
       {
         "remoteGpgKey": "https://gitlab.com/paulcarroty/vscodium-deb-rpm-repo/raw/master/pub.gpg",
         "gpgKeyPath": "/usr/share/keyrings/vscodium-archive-keyring.gpg",
