fix: json syntax err

--- a/config.json
+++ b/config.json
@@ -78,7 +78,7 @@
 "remoteGpgKey": "https://download.docker.com/linux/ubuntu/gpg",
 "gpgKeyPath": "/etc/apt/keyrings/docker.asc",
 "repo": "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo '$VERSION_CODENAME') stable",
-"packages", [
+"packages": [
 "docker-ce", "docker-ce-cli", "containerd.io", "docker-buildx-plugin", "docker-compose-plugin"
 ]
 },
