refactor: rm config plank due to sync bug

--- a/config.json
+++ b/config.json
@@ -123,6 +123,7 @@
     "check": true,
     "dotfiles": [
       "alacritty",
+      "autostart",
       "bash",
       "codium",
       "macchina",
