--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
+  "global": {},
   "check": {
+    "purge": [],
     "apt": [
       "# essential packages",
       "apt-transport-https",
@@ -31,16 +33,18 @@
       "libssh-dev",
       "libssl-dev",
       "pkgconf",
+      "# imagemagick dependencies",
+      "libjpeg-dev",
+      "libpng-dev",
+      "libtiff-dev",
+      "# docker dependencies",
+      "lsb-release",
       "# alacritty dependencies",
       "libfontconfig1-dev",
       "libfreetype6-dev",
       "libxcb-xfixes0-dev",
       "libxkbcommon-dev",
-      "pkg-config",
-      "# imagemagick dependencies",
-      "libjpeg-dev",
-      "libpng-dev",
-      "libtiff-dev"
+      "pkg-config"
     ],
     "python": {
       "pyenvCheck": true,
@@ -49,22 +53,23 @@
     "rust": {
       "rustupCheck": true,
       "cargoUpdateCheck": true
-    },
-    "firmware": {}
+    }
   },
   "install": {
     "check": true,
     "apt": [
-      "btop",
+      "# CLI utils",
       "fzf",
       "gnupg2",
-      "imagemagick",
-      "nautilus",
       "openssh-server",
       "stow",
       "vim",
+      "xclip",
+      "# multimedia",
+      "imagemagick",
       "vlc",
-      "xclip"
+      "# apps",
+      "nautilus"
     ],
     "ppa": [
       {
@@ -78,9 +83,19 @@
     ],
     "aptAltSources": [
       {
+        "remoteGpgKey": "https://packages.mozilla.org/apt/repo-signing-key.gpg",
+        "gpgKeyPath": "/etc/apt/keyrings/packages.mozilla.org.asc",
+        "repo": "deb [signed-by=/etc/apt/keyrings/packages.mozilla.org.asc] https://packages.mozilla.org/apt mozilla main",
+        "sourceFile": "mozilla",
+        "pinning": "Package: *\nPin: origin packages.mozilla.org\nPin-Priority: 1000",
+        "packages": []
+      },
+      {
         "remoteGpgKey": "https://download.docker.com/linux/ubuntu/gpg",
         "gpgKeyPath": "/etc/apt/keyrings/docker.asc",
         "repo": "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo '$VERSION_CODENAME') stable",
+        "sourceFile": "docker",
+        "pinning": false,
         "packages": [
           "docker-ce",
           "docker-ce-cli",
@@ -93,7 +108,17 @@
         "remoteGpgKey": "https://gitlab.com/paulcarroty/vscodium-deb-rpm-repo/raw/master/pub.gpg",
         "gpgKeyPath": "/usr/share/keyrings/vscodium-archive-keyring.gpg",
         "repo": "deb [ signed-by=/usr/share/keyrings/vscodium-archive-keyring.gpg ] https://download.vscodium.com/debs vscodium main",
+        "sourceFile": "vscodium",
+        "pinning": false,
         "packages": ["codium"]
+      },
+      {
+        "remoteGpgKey": "https://www.virtualbox.org/download/oracle_vbox_2016.asc",
+        "gpgKeyPath": "/usr/share/keyrings/oracle-virtualbox-2016.gpg",
+        "repo": "deb [arch=amd64 signed-by=/usr/share/keyrings/oracle-virtualbox-2016.gpg] https://download.virtualbox.org/virtualbox/debian <mydist> contrib",
+        "sourceFile": "virtualbox",
+        "pinning": false,
+        "packages": ["virtualbox-7.0"]
       }
     ],
     "flatpak": [
@@ -104,6 +129,7 @@
       "org.libreoffice.LibreOffice",
       "org.telegram.desktop"
     ],
+    "pip": ["trash-cli"],
     "cargo": [
       "alacritty",
       "bat --locked",
