--- a/dotfiles/codium/.config/VSCodium/User/settings.json
+++ b/dotfiles/codium/.config/VSCodium/User/settings.json
@@ -14,6 +14,9 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
+    "[yaml]": {
+        "editor.defaultFormatter": "redhat.vscode-yaml"
+    },
     "codesnap.showLineNumbers": false,
     "editor.cursorBlinking": "expand",
     "editor.fontSize": 16,
