--- a/config.yaml
+++ b/config.yaml
@@ -79,7 +79,7 @@ config:
     aptAltSources:
       - remoteGpgKey: https://packages.mozilla.org/apt/repo-signing-key.gpg
         gpgKeyPath: /etc/apt/keyrings/packages.mozilla.org.asc
-        repo: deb [signed-by=/etc/apt/keyrings/packages.mozilla.org.asc] https://packages.mozilla.org/apt mo
+        repo: deb [signed-by=/etc/apt/keyrings/packages.mozilla.org.asc] https://packages.mozilla.org/apt mozilla main
         sourceFile: mozilla
         pinning: |-
           Package: *
@@ -89,7 +89,7 @@ config:
           - firefox
       - remoteGpgKey: https://download.docker.com/linux/ubuntu/gpg
         gpgKeyPath: /etc/apt/keyrings/docker.asc
-        repo: deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://downloa
+        repo: deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) stable
         sourceFile: docker
         pinning: false
         packages:
@@ -100,14 +100,14 @@ config:
           - docker-compose-plugin
       - remoteGpgKey: https://gitlab.com/paulcarroty/vscodium-deb-rpm-repo/raw/master/pub.gpg
         gpgKeyPath: /usr/share/keyrings/vscodium-archive-keyring.gpg
-        repo: deb [ signed-by=/usr/share/keyrings/vscodium-archive-keyring.gpg ] https://download.vscodium.c
+        repo: deb [signed-by=/usr/share/keyrings/vscodium-archive-keyring.gpg] https://download.vscodium.com/debs vscodium main
         sourceFile: vscodium
         pinning: false
         packages:
           - codium
       - remoteGpgKey: https://www.virtualbox.org/download/oracle_vbox_2016.asc
         gpgKeyPath: /usr/share/keyrings/oracle-virtualbox-2016.asc
-        repo: deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/oracle-virtualbox-2016.asc] https://download.virtualbox.org/virtualbox/debian $(. /etc/os-release && echo $UBUNTU_CODENAME) contrib
+        repo: deb [arch=amd64 signed-by=/usr/share/keyrings/oracle-virtualbox-2016.asc] https://download.virtualbox.org/virtualbox/debian $(. /etc/os-release && echo $UBUNTU_CODENAME) contrib
         sourceFile: virtualbox
         pinning: false
         packages:
