--- a/config.yaml
+++ b/config.yaml
@@ -54,6 +54,7 @@ config:
       cargoUpdateCheck: true
   install:
     check: false
+    aptEnabled: true
     apt:
       # CLI utils
       - fzf
@@ -68,6 +69,7 @@ config:
       - imagemagick
       - vlc
       # productivity
+    ppaEnabled: false
     ppa:
       - ppaUrl: ppa:qbittorrent-team/qbittorrent-stable
         packages:
@@ -75,6 +77,7 @@ config:
       - ppaUrl: ppa:obsproject/obs-studio
         packages:
           - obs-studio
+    aptAltSourcesEnabled: false
     aptAltSources:
       - remoteGpgKey: https://packages.mozilla.org/apt/repo-signing-key.gpg
         gpgKeyPath: /etc/apt/keyrings/packages.mozilla.org.asc
@@ -111,6 +114,7 @@ config:
         pinning: false
         packages:
           - virtualbox-7.0
+    flatpakEnabled: false
     flatpak:
       - com.discordapp.Discord
       # - com.obsproject.Studio
@@ -118,8 +122,10 @@ config:
       # - org.gimp.GIMP
       # - org.libreoffice.LibreOffice
       # - org.telegram.desktop
+    pipEnabled: false
     pip:
       - trash-cli
+    cargoEnabled: false
     cargo:
       - alacritty
       - bat --locked
@@ -129,6 +135,7 @@ config:
       - starship --locked
       - zellij --locked
       - zoxide --locked
+    binariesEnabled: false
     binaries:
       - name: Bitwarden.AppImage
         url: https://vault.bitwarden.com/download/?app=desktop&platform=linux&variant=appimage
