--- a/config.yaml
+++ b/config.yaml
@@ -176,5 +176,25 @@ config:
       git:
         userInfo: false # NOTE: set actual contents in secrets.yaml
       docker: true
+      vscodium:
+        extensions:
+          - adpyke.codesnap
+          - catppuccin.catppuccin-vsc
+          - catppuccin.catppuccin-vsc-icons
+          - christian-kohler.path-intellisense
+          - eamodio.gitlens
+          - ecmel.vscode-html-css
+          - esbenp.prettier-vscode
+          - foxundermoon.shell-format
+          - hediet.vscode-drawio
+          - ms-python.black-formatter
+          - ms-python.debugpy
+          - ms-python.isort
+          - ms-python.python
+          - redhat.vscode-yaml
+          - streetsidesoftware.code-spell-checker
+          - timonwong.shellcheck
+          - wayou.vscode-todo-highlight
+          - yzhang.markdown-all-in-one
     theming:
       cinnamon: {}
