--- a/sample/config_full.yaml
+++ b/sample/config_full.yaml
@@ -2,7 +2,7 @@ version: 0.0.1
 metadata: null
 config:
   check:
-    purgeEnabled: false # NOTE: this should be only true for the 1st run!
+    purgeEnabled: true # NOTE: this should be true for only the 1st run!
     purge:
       # firefox installed via aptAltSources
       - firefox*
@@ -14,7 +14,7 @@ config:
       - podman-docker
       - containerd
       - runc
-    depsEnabled: false
+    depsEnabled: true
     deps:
       # essential packages
       - apt-transport-https
@@ -67,7 +67,7 @@ config:
     firmware: null
   install:
     check: true
-    aptEnabled: false
+    aptEnabled: true
     apt:
       # CLI utils
       - fzf
@@ -82,7 +82,7 @@ config:
       - imagemagick
       - vlc
       # productivity
-    ppaEnabled: false
+    ppaEnabled: true
     ppa:
       - ppaUrl: ppa:qbittorrent-team/qbittorrent-stable
         packages:
@@ -90,7 +90,7 @@ config:
       - ppaUrl: ppa:obsproject/obs-studio
         packages:
           - obs-studio
-    aptAltSourcesEnabled: false
+    aptAltSourcesEnabled: true
     aptAltSources:
       - remoteGpgKey: https://packages.mozilla.org/apt/repo-signing-key.gpg
         gpgKeyPath: /etc/apt/keyrings/packages.mozilla.org.asc
@@ -127,7 +127,7 @@ config:
         pinning: false
         packages:
           - virtualbox-7.0
-    flatpakEnabled: false
+    flatpakEnabled: true
     flatpak:
       - com.discordapp.Discord
       # - com.obsproject.Studio
@@ -135,7 +135,7 @@ config:
       # - org.gimp.GIMP
       # - org.libreoffice.LibreOffice
       # - org.telegram.desktop
-    cargoEnabled: false
+    cargoEnabled: true
     cargo:
       - alacritty
       - bat --locked
@@ -145,7 +145,7 @@ config:
       - starship --locked
       - zellij --locked
       - zoxide --locked
-    binariesEnabled: false
+    binariesEnabled: true
     binaries:
       - name: Bitwarden.AppImage
         url: https://vault.bitwarden.com/download/?app=desktop&platform=linux&variant=appimage
@@ -153,7 +153,7 @@ config:
     check: true
     apt:
       apt: true
-      aptFull: false # NOTE: apt must be true for aptFull to take effect
+      aptFull: true # NOTE: apt must be true for aptFull to take effect
     flatpak: true
     python: true
     cargo: true
@@ -174,10 +174,9 @@ config:
         - zellij
     apps:
       git:
-        userInfo: false # NOTE: set actual contents in secrets.yaml
+        userInfo: true # NOTE: set actual contents in secrets.yaml
       docker: true
       vscodium:
-        extensionsEnabled: false
         extensions:
           - adpyke.codesnap
           - catppuccin.catppuccin-vsc
