--- a/dotfiles/macchina/.config/macchina/themes/Expanded.toml
+++ b/dotfiles/macchina/.config/macchina/themes/Expanded.toml
@@ -1,22 +1,27 @@
-# Minimal
+# Expanded
 
 spacing         = 2
 padding         = 0
 hide_ascii      = true
-prefer_small_ascii = true
+# prefer_small_ascii = true
 separator       = "❥"
 
 [palette]
 type            = "Light"
 glyph           = "● "
-visible         = false
+visible         = true
+
+# [bar]
+# glyph           = "■"
+# visible = true
+# hide_delimiters = true
 
 [box]
 border          = "rounded"
 visible         = true
 
 [box.inner_margin]
-x = 1
+x = 2
 y = 0
 
 [randomize]
